# test_lambda_app

./: .gitignore  amplify.yml  package.json  pyproject.toml  serverless.yml
.github/workflows/: amplify-deploy.yml  deploy.yml
amplify/: team-provider-info.json
amplify/backend/: backend-config.json
amplify/backend/api/fastapi/: cli-inputs.json  fastapi-cloudformation-template.json  parameters.json
scripts/: build_lambda.py  build_layer.py  init_terraform_backend.sh
src/: main.py
terraform/: data.tf  iam.tf  main.tf  outputs.tf  s3_backend.tf  variables.tf
